syntax = "proto3";
package SsoResolver;
message TokenBody{
	string username = 1;
	string password = 2;
}
message Result{
	number code = 1;
}
message LogoutBody{
	string access_token = 1;
}

service SsoResolver{
	rpc Token (TokenBody) returns (Result);
	rpc Verify (LogoutBody) returns (Result);
	rpc RefreshToken (LogoutBody) returns (Result);
	rpc Logout (LogoutBody) returns (Result);
}

